scenarios/04-argocd-gitops/manifests/cadastros/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cadastros
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cadastros
  template:
    metadata:
      labels:
        app: cadastros
    spec:
      containers:
        - name: api
          image: traefik/whoami:v1.11
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "2Mi"
              cpu: "2m"
            limits:
              memory: "32Mi"
              cpu: "25m"
