scenarios/04-argocd-gitops/manifests/cadastros/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastros
  # namespace: teste # Deve estar no mesmo namespace
spec:
  selector:
    app: cadastros # Deve bater exatamente com o label do Deployment
  ports:
    - protocol: TCP
      port: 80 # Porta exposta pelo Service
      targetPort: 80 # Porta onde o container está rodando
