scenarios/04-argocd-gitops/manifests/cadastros/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadastros
  # namespace: teste # Deve estar no mesmo namespace
spec:
  rules:
    - host: cadastros.localhost # Substitua pelo seu domínio configurado no DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadastros # Nome do Service criado acima
                port:
                  number: 80
